# backend

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  test_urban_update_nearby.py
app/: main.py  router.py
app/handler/: __init__.py  chloride_ionized_concrete.py  house_hunt.py  properties.py  todaywork.py  work_diagram.py
app/handlers/: urban_update_handler.py
app/middleware/: exception.py
app/models/: chloride_Ionized_concrete.py  chloride_ionized_concrete_geojson.py  earthquake_building_geojson.py  earthquakes_building.py  house_hunt.py  properties.py  todaywork.py  urban_update_model.py  work_diagram.py
app/services/: AirQuality.py  TodayWork.py  WorkDiagram.py  __init__.py  chloride_Ionized_concrete.py  chloride_ionized_concrete_geojson.py  earthquake_building.py  earthquake_building_geojson.py  house_hunt.py  properties.py  urban_update_service.py
app/utils/: ana2.py  ana3.py  ana4.py  ana5.py  ana6.py  analysis.py  taipei-dugeng-no-match.json  test.py
data/: chloride_ionized_concrete_data_cleaning.py  fetch_earthquake_buildings_data_cleaning.py  fetch_earthquake_buildings_format.json
test/: test_chloride_Ionized_concrete.py  test_models_earthquakes.py  test_models_properties.py  test_models_todaywork.py  test_models_work_diagram.py
