[project]
name = "backend"
version = "0.1.0"
description = "hackathon project backends"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "geojson>=3.2.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pyproj>=3.7.2",
    "pytest>=8.4.2",
    "shapely>=2.1.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = ["ruff>=0.14.4"]
